# haskell

./: .gitignore  CHANGELOG.md  Setup.hs  template.toml  {{ project }}.cabal
bench/: bench.hs
bench/Bench/{{ Project }}/: Reverse.hs
main/: {{ project }}.hs
src/: {{ Project }}.hs
src/{{ Project }}/: Prelude.hs  Reverse.hs
src/{{ Project }}/Command/: Reverse.hs
test/: test.hs
test/Test/{{ Project }}/: Reverse.hs
