name:
  {{ project }}
version:
  {{ version }}
homepage:
  https://github.com/{{ github_username }}/{{ project }}#readme
bug-reports:
  https://github.com/{{ github_username }}/{{ project }}/issues
synopsis:
  {{ project }}
description:
  {{ description }}
license:
  {{ license }}
category:
  Application
license-file:
  LICENSE
author:
  {{ name }} <{{ email }}>
maintainer:
  {{ name }} <{{ email }}>
copyright:
  Copyright: (c) {{ year }} {{ name }}
build-type:
  Custom
extra-doc-files:
  README.md
  CHANGELOG.md
cabal-version:
  1.18

source-repository head
  type: git
  location: git://github.com/{{ github_username }}/{{ project }}.git

library
  build-depends:
      base                            >= 3          && < 5
    , bytestring                      >= 0.10       && < 0.11
    , containers                      >= 0.5        && < 0.7
    , errors                          >= 2.0        && < 2.4
    , mmorph                          >= 1.0        && < 1.2
    , text                            >= 1.2        && < 1.3
    , transformers                    >= 0.5        && < 0.6
    , transformers-bifunctors         >= 0.1        && < 0.2

  default-language:
    Haskell2010

  ghc-options:
    -Wall

  hs-source-dirs:
    src

  exposed-modules:
    {{ Project }}.Command.Reverse
    {{ Project }}.Prelude
    {{ Project }}.Reverse

executable {{ project }}
  build-depends:
      {{ project }}
    , base                            >= 3          && < 5
    , optparse-applicative            >= 0.14       && < 0.15

  ghc-options:
   -Wall -threaded -rtsopts -with-rtsopts=-N

  default-language:
    Haskell2010

  hs-source-dirs:
    main

  main-is:
    {{ project }}.hs


test-suite test
  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    test

  main-is:
    test.hs

  other-modules:
    Test.{{ Project }}.Reverse

  build-depends:
      {{ project }}
    , base
    , hedgehog                        >= 0.6        && < 0.7

  default-language:
    Haskell2010

  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N

benchmark bench
  type:
    exitcode-stdio-1.0

  hs-source-dirs: 
    bench

  main-is:
    bench.hs

  other-modules:
    Bench.{{ Project }}.Reverse

  build-depends:
      {{ project }}
    , base
    , gauge                           >= 0.2        && < 0.3

  ghc-options:
     -Wall -O3 -threaded -rtsopts -with-rtsopts=-N

  default-language:
    Haskell2010
